# GooglyAI

./: .gitignore  README.md  pyproject.toml
googlyai/data_pipeline/: db.py
googlyai/data_pipeline/odi/: ingest.py  parser.py  schema.py
scripts/: ingest_odi_json.py
